deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: my-con
        ports:
        - containerPort: 80
        image: venkatesh676/phpapp:appimage 

        ### config maps
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
          requests:
            memory: "250Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        #startup probe will be used when either of these livesness or readiness probes are failing, and the container is taking a long time to start up.
