app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
